--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             <div class="calculator-keys">
                 <div class="row">
                     <button class="all-clear">AC</button>
-                    <button class="percentage" value="%">%</button>
+                    <button class="operator" value="%">%</button>
                     <button class="operator" value="/">&divide;</button>
                 </div>
                 <div class="row">
