--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
         <title>Basic Calculator</title>
         <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
         <link rel="stylesheet" href="stylesheet.css">
+        <link rel="stylesheet" href="responsive.css">
     </head>
     <body>
         <div class="calculator">
